# Daemonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: tui-library-analysis.md
src/: quick-test.cpp  test-monitors.cpp
src/functions/system/app-core-sys/: kernel.cpp  kernel.h  main.cpp
src/functions/system/display-sys/: display.cpp  display.h  embedded_font.h  svg-render.cpp  svg-render.h
src/functions/system/monitor-sys/: cpu-monitor.cpp  cpu-monitor.h  disk-monitor.cpp  disk-monitor.h  gpu-monitor.cpp  gpu-monitor.h  metric.h  net-monitor.cpp  net-monitor.h  power-monitor.cpp  power-monitor.h  ram-monitor.cpp  ram-monitor.h  ring-buffer.h
src/functions/system/print-sys/: print.cpp  print.h
src/functions/system/tray-sys/: tray.cpp  tray.h
src/resources/: daemonitor.rc  resource.h
support/reference/: the-codex-of-program-design__1.0.0.txt
